# Windows-Package-Manager

./: .coverage  .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt  setup.py
core/: app_database.py  config.py  exceptions.py  installer.py  logger.py  winget_manager.py
data/: app_catalog.json  categories.json
gui/: main_window.py
tests/: test_app_database.py  test_config.py  test_coverage_gaps.py  test_exceptions.py  test_installer.py  test_logger.py  test_main.py  test_main_window.py  test_winget_manager.py  test_winget_package_validation.py
